--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'D501'
 - !lcsh 'World War, 1914-1918 -- Personal narratives, English'
+- GITenberg
 title: On the Fringe of the Great Fight
 url: http://www.gutenberg.org/ebooks/19876
